--- a/views/home.ejs
+++ b/views/home.ejs
@@ -35,7 +35,7 @@
         </main>
 
         <footer class="mt-auto text-white-50">
-            <p>&copy; 2020 </p>
+            <p>&copy; YelpCamp 2020 </p>
         </footer>
 
 
